--- a/src/short.html
+++ b/src/short.html
@@ -8,13 +8,14 @@
     <title>pattypan css</title>
     <!-- These will get combined into pattypan.css -->
     <link rel="stylesheet" href="./_normalize.css">
+    <link rel="stylesheet" href="./_colors.css">
     <link rel="stylesheet" href="./grid.css">
     <link rel="stylesheet" href="./main.css">
-<style>
-    body {
-        background-color: aqua;
-    }
-</style>
+    <style>
+        body {
+            background-color: aqua;
+        }
+    </style>
 </head>
 
 <body>
